# private-equity

./: .gitignore  .mcp.json  README.md  pyproject.toml
demo/: sample_portfolio.csv
demo/etelequote/: generate.py
demo/hmda_dc/: slice.py
demo/hmda_states/: slice.py
demo/lending_club/: README.md  __init__.py  slice.py
demo/regional_lenders/: README.md  slice.py
demo/saas_pricing/: generate.py
demo/yasserh_mortgages/: slice.py
docs/: index.html  opportunity_map_schema.md
docs/app/: app.css  app.js  index.html  tools.html
docs/demo/: voiceover-scripts.md
finance-mcp-plugin/: .mcp.json
finance-mcp-plugin/commands/: ai-act-audit.md  ai-readiness.md  analyze-dataroom.md  audit-agents.md  benchmark-corpus.md  benchmark-trend.md  benchmark-vendors.md  dd-checklist.md  dd-prep.md  ddq-respond.md  diagnose-decisions.md  eval-pe-output.md  exit-proof-pack.md  explain-decision.md  ic-memo.md  liquidity-risk.md  market-risk.md  (+12 more)
scripts/: build_bx_corpus.py  build_bx_hmda_states.py  build_bx_mixed_fund.py  record_demo.py  render_beat_frames.py  run_eval_corpus.py  start_web.sh
tests/: conftest.py  test_benchmark_vendors_smoke.py  test_bx.py  test_data_validation.py  test_ddq_respond_smoke.py  test_dx_etelequote_e2e.py  test_dx_ingest.py  test_dx_memo.py  test_dx_report_m4.py  test_dx_saas_e2e.py  test_dx_segment_stats.py  test_dx_time_stability_counterfactual.py  test_eu_ai_act_smoke.py  test_eval_pe_output.py  test_lending_b2c_template.py  test_normalize_smoke.py  test_pe_analytical.py  test_pe_deal_flow.py  test_pe_portfolio.py  test_regional_lenders_demo.py
(+89 files in other folders)
