[project]
name = "private-equity-mcp"
version = "0.1.0"
description = "Private-Equity MCP server for Claude Code — Decision-Optimization Diagnostic (DX) + Cross-Portco Benchmarking (BX)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "huggingface_hub>=0.20",
]

[project.scripts]
pe-mcp = "finance_mcp.server:mcp.run"
pe-mcp-web = "finance_mcp.web:start"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
